[package]
name = "iced_futures"
description = "Commands, subscriptions, and future executors for iced"
version = "0.12.3"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
thread-pool = ["futures/thread-pool"]

[dependencies]
iced_core = "0.12"

futures.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std.workspace = true
async-std.optional = true
async-std.features = ["unstable"]

smol.workspace = true
smol.optional = true

tokio.workspace = true
tokio.optional = true
tokio.features = ["rt", "rt-multi-thread", "time"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
wasm-timer.workspace = true
