[package]
name = "iced_winit"
description = "A runtime for iced on top of winit"
version = "0.12.3"
edition = "2021"

[features]
default = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]
debug = ["iced_runtime/debug"]
system = ["sysinfo"]
application = []
x11 = ["winit/x11"]
wayland = ["winit/wayland"]
wayland-dlopen = ["winit/wayland-dlopen"]
wayland-csd-adwaita = ["winit/wayland-csd-adwaita"]
multi-window = ["iced_runtime/multi-window"]

[dependencies]
iced_graphics = "0.12"
iced_runtime = "0.12"
iced_style = "0.12"

log.workspace = true
thiserror.workspace = true
tracing.workspace = true
window_clipboard.workspace = true
winit.workspace = true

sysinfo.workspace = true
sysinfo.optional = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
web-sys.features = ["Document", "Window"]
